update img link media

--- a/gestor/templates/index.html
+++ b/gestor/templates/index.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header class="flex justify-between items-center bg-white px-4 py-3 shadow-md">
     <div class="flex items-center">
-      <img src="{% static 'logo.png' %}" alt="Logo" class="w-8 h-8" >
+      <img src='https://i.postimg.cc/7ZSDpYW1/logo.png' alt="Logo" class="w-8 h-8" >
       <span class="ml-2 font-bold text-lg text-blue-900">Inmersion Musical</span>
     </div>
     <div class="flex gap-4">
@@ -159,7 +159,7 @@
     <!-- Logo and Social Media -->
     <div class="flex flex-col items-center lg:items-center gap-6">
         <div class="flex items-center gap-4">
-            <img alt="Logo Preview" src="{% static 'logo.png' %}" width="65">
+            <img alt="Logo Preview" src='https://i.postimg.cc/7ZSDpYW1/logo.png' width="65">
             <div class="text-3xl text-center font-bold">Inmersion Musical</div>
         </div>
         <div class="flex gap-4 justify-center">
