--- a/gestor/templates/login.html
+++ b/gestor/templates/login.html
@@ -15,12 +15,20 @@
     <div class="flex flex-col w-full max-w-md p-8 sm:p-10 lg:p-12 bg-white rounded-2xl shadow-xl">
         <div class="flex items-center gap-3 pb-4">
             <img src="{% static 'logo.png' %}" alt="Logo" class="w-12 h-12">
-            <h1 class="text-2xl sm:text-3xl font-bold text-gray-700">Inmersion Musical</h1>
+            <h1 class="text-2xl sm:text-3xl font-bold text-sky-900">Inmersión Musical</h1>
         </div>
         <p class="text-sm font-light text-gray-500 pb-8">Inicio de Sesión</p>
-        <form class="flex flex-col gap-6">
+        <form method="post" action="{% url 'validarUsuario' %}" class="flex flex-col gap-6">
+            {% csrf_token %}
+            {% if form.errors %}
+                <div class="bg-red-100 text-red-700 p-2 rounded-lg">
+                    {% for error in form.non_field_errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
             <div>
-                <label for="email" class="block text-sm font-medium text-gray-700">Usuario</label>
+                <label for="{{ form.username.id_for_label }}" class="block text-sm font-medium text-gray-700 text-sky-900">Usuario</label>
                 <div class="relative">
                     <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -28,13 +36,14 @@
                             <path d="M22 7L13.03 12.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
                         </svg>
                     </span>
-                    <input type="email" id="email" placeholder="name@company.com" class="pl-12 w-full bg-gray-50 border border-gray-300 rounded-lg text-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+                    {{ form.username }}
                 </div>
             </div>
+            
             <div>
-                <label for="password" class="block text-sm font-medium text-gray-700">Contraseña</label>
+                <label for="{{ form.password.id_for_label }}" class="block text-sm font-medium text-gray-700 text-sky-900">Contraseña</label>
                 <div class="relative">
-                    <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400 pr-5">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <rect width="18" height="18" x="3" y="3" rx="2"></rect>
                             <path d="M12 8v8"></path>
@@ -42,16 +51,38 @@
                             <path d="M8.5 10L15.5 14"></path>
                         </svg>
                     </span>
-                    <input type="password" id="password" placeholder="••••••••" class="pl-12 w-full bg-gray-50 border border-gray-300 rounded-lg text-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+                    {{ form.password }}
                 </div>
             </div>
+
+            <div>
+                <label for="{{ form.tipoUsuario.id_for_label }}" class="block text-sm font-medium text-gray-700 text-sky-900">
+                    Tipo de usuario
+                </label>
+                <div class="relative">
+                    <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400 pr-5">
+                        <!-- Nuevo SVG de usuario -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                  d="M12 14c4.418 0 8-1.79 8-4s-3.582-4-8-4-8 1.79-8 4 3.582 4 8 4zm0 0v6m-4-6a4 4 0 018 0" />
+                        </svg>
+                    </span>
+                    {{ form.tipoUsuario }}
+                </div>
+            </div>
+            
+            
             <button type="submit" class="w-full text-white bg-indigo-600 hover:bg-indigo-700 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm px-5 py-3 transition duration-150 ease-in-out">
                 Login
             </button>
         </form>
-        <p class="text-sm font-light text-gray-500 mt-6">Hola, 
-            <a href="#" class="font-medium text-indigo-600 hover:underline">Olvidaste tu Contraseña? </a>
+        <p class="text-sm text-gray-600 flex items-center gap-1 mt-5">
+            Hola,
+            <a href="#" class="font-medium text-blue-500 hover:text-blue-700 transition duration-200">
+                ¿Olvidaste tu contraseña?
+            </a>
         </p>
+        
     </div>
 </section>
 
